--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -38,6 +38,10 @@ main {
   display: flex;
   width: 100%;
   justify-content: space-between;
+
+  & a:visited {
+    color: var(--brand);
+  }
 }
 
 :where(nav > ul) {
@@ -50,6 +54,7 @@ main {
 :where(nav > ul) > li {
   color: var(--text-2);
   margin-block-end: 0;
+  margin-inline-start: var(--size-2);
 }
 
 :where(nav > ul) > li.brand {
@@ -64,7 +69,7 @@ main {
 
 :where(.grid) {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(400px, 100%), 1fr));
   gap: var(--size-8);
   align-items: start;
 }
@@ -118,6 +123,11 @@ main {
   letter-spacing: var(--font-letterspacing-0);
 }
 
+:where(section.hero h3 code),
+:where(section.hero h3) {
+  display: inline-block;
+}
+
 :where(.hero button) {
   background-color: var(--brand);
   padding-block: var(--size-4);
@@ -144,11 +154,12 @@ p {
 }
 
 :where(h1) {
+  font-size: var(--font-size-fluid-3);
   color: var(--brand);
 }
 
 :where(ul li) {
-  margin-block-end: var(--size-3);
+  margin-block-end: var(--size-4);
   padding-inline: var(--size-2);
 }
 
